Proper alignment of the column's headers in relation to the page's title. Fixed the columns positioning in IE8 on the large screens

--- a/bottlecap/static/_grid.less
+++ b/bottlecap/static/_grid.less
@@ -26,5 +26,5 @@
     margin-left: 0;
 }
 .omega() {
-    margin-left: 0;
+    margin-right: 0;
 }
